Covered login test cases

--- a/FlushProperties/Flush.properties
+++ b/FlushProperties/Flush.properties
@@ -58,6 +58,9 @@ UserNameCancelButton=//*[text()='CANCEL']
 UserNameUpdateButton=//*[text()='UPDATE']
 UserNameInputBox=//*[@type='text']
 
+Loyality=//*[text()='Loyality']
+VIPdropdown=(//*[@class='UserDropdownMenu__DropdownItem-sc-qt4bc8-5 iLdCch'])[2]
+
 
 
 
