--- a/test-output/old/Suite/Test.properties
+++ b/test-output/old/Suite/Test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Test]
+[SuiteResult context=Home Page Test][SuiteResult context=LoginPopup Page Test][SuiteResult context=Test][SuiteResult context=Test1]
